improved mapping of dyn features

--- a/docs/source/_notebooks/main.ipynb
+++ b/docs/source/_notebooks/main.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "... because only the first title in this cell is used.\n",
     "\n",
-    "* [Global](grqa.ipynb)\n",
+    "* [Global River Water Quality](grqa.ipynb)\n",
     "* [Laos](mtropics_laos.ipynb)\n",
     "* [Summary of Rainfall Runoff Datasets](rr_summary.ipynb)\n"
    ]
