--- a/docs/source/_notebooks/main.ipynb
+++ b/docs/source/_notebooks/main.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gallery of Examples\n"
+    "# Notebooks\n"
    ]
   },
   {
