--- a/docs/source/_notebooks/mtropics_laos.ipynb
+++ b/docs/source/_notebooks/mtropics_laos.ipynb
@@ -74,8 +74,8 @@
     "\n",
     "from easy_mpl import pie\n",
     "from ai4water.eda import EDA\n",
-    "from water_datasets import MtropicsLaos, ecoli_mekong\n",
-    "from water_datasets.utils import print_info\n",
+    "from aqua_fetch import MtropicsLaos, ecoli_mekong\n",
+    "from aqua_fetch.utils import print_info\n",
     "\n",
     "print_info()"
    ]
