--- a/docs/source/_notebooks/grqa.ipynb
+++ b/docs/source/_notebooks/grqa.ipynb
@@ -62,8 +62,8 @@
     "\n",
     "from easy_mpl import plot\n",
     "import matplotlib.pyplot as plt\n",
-    "from water_datasets import GRQA\n",
-    "from water_datasets.utils import print_info\n",
+    "from aqua_fetch import GRQA\n",
+    "from aqua_fetch.utils import print_info\n",
     "\n",
     "print_info()"
    ]
