--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -371,3 +371,51 @@ url = {https://github.com/Unidata/netcdf-c}
     https://aip.scitation.org/doi/pdf/10.1109/MCSE.2007.55
   }
 }
+
+
+@Article{camels_gb,
+AUTHOR = {Coxon, G. and Addor, N. and Bloomfield, J. P. and Freer, J. and Fry, M. and Hannaford, J. and Howden, N. J. K. and Lane, R. and Lewis, M. and Robinson, E. L. and Wagener, T. and Woods, R.},
+TITLE = {CAMELS-GB: hydrometeorological time series and landscape attributes for 671
+catchments in Great Britain},
+JOURNAL = {Earth System Science Data},
+VOLUME = {12},
+YEAR = {2020},
+NUMBER = {4},
+PAGES = {2459--2483},
+URL = {https://essd.copernicus.org/articles/12/2459/2020/},
+DOI = {10.5194/essd-12-2459-2020}
+}
+
+
+
+
+@misc{dataretrieval,
+  author = {Hodson, T.O., Hariharan, J.A., Black, S., and Horsburgh, J.S.},
+  title = {dataretrieval (Python): a Python package for discovering and retrieving water data available from U.S. federal hydrologic web services: U.S. Geological Survey},
+  howpublished = {\url{https://github.com/DOI-USGS/dataretrieval-python}},
+  year = {2023},
+  note = {Accessed on 16 Jan 2025},
+  doi = {10.5066/P94I5TX3}
+}
+
+
+@misc{hydrofunctions,
+  author = {Martin Roberge},
+  title = {hydrofunctions},
+  howpublished = {\url{https://github.com/mroberge/hydrofunctions}},
+  year = {2018},
+  note = {Accessed on 16 Jan 2025}
+}
+
+
+
+@dataset{caravan_dk_koch2023,
+  author       = {Koch, Julian},
+  title        = {Caravan extension Denmark - Danish dataset for large-sample hydrology},
+  month        = may,
+  year         = 2023,
+  publisher    = {Zenodo},
+  version      = {v\_05},
+  doi          = {10.5281/zenodo.7962379},
+  url          = {https://doi.org/10.5281/zenodo.7962379},
+}
