--- a/docs/source/_notebooks/main.ipynb
+++ b/docs/source/_notebooks/main.ipynb
@@ -35,7 +35,8 @@
     "\n",
     "* [Global River Water Quality](grqa.ipynb)\n",
     "* [Laos](mtropics_laos.ipynb)\n",
-    "* [Summary of Rainfall Runoff Datasets](rr_summary.ipynb)\n"
+    "* [Summary of Rainfall Runoff Datasets](rr_summary.ipynb)\n",
+    "* [Summary of Water Quality Datasets](wq_summary.ipynb)\n"
    ]
   },
   {
