--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -185,8 +185,8 @@ Padgam and Hugh Parsonage and and Adam H. Sparks},
 
 
 @article{Caravan,
-  title={Frederik Kratzert, Grey Nearing, Nans Addor, Tyler Erickson, Martin Gauch, Oren Gilon, Lukas Gudmundsson, Avinatan Hassidim, Daniel Klotz, Sella Nevo, Guy Shalev & Yossi Matias },
-  author={do Nascimento, Thiago VM and Rudlang, Julia and H{\"o}ge, Marvin and van der Ent, Ruud and Chappon, M{\'a}t{\'e} and Seibert, Jan and Hrachowitz, Markus and Fenicia, Fabrizio},
+  title={Caravan - A global community dataset for large-sample hydrology},
+  author={Frederik Kratzert, Grey Nearing, Nans Addor, Tyler Erickson, Martin Gauch, Oren Gilon, Lukas Gudmundsson, Avinatan Hassidim, Daniel Klotz, Sella Nevo, Guy Shalev & Yossi Matias },
   journal={Scientific Data},
   volume={10},
   number={61},
