resolved capitalization problem in .bib file

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -1,6 +1,6 @@
 @InProceedings{Pandas,
   author    = "Wes McKinney",
-  title     = "Data Structures for Statistical Computing in Python",
+  title     = "Data {S}tructures for {S}tatistical {C}omputing in {P}ython",
   booktitle = "Proceedings of the 9th Python in Science Conference",
   pages     = "51--56",
   year      = 2010,
@@ -60,7 +60,7 @@ DOI = {10.25080/Majora-92bf1922-00a}
   number = {102},
   pages = {7305},
   author = {Justin Bousquin and Cristina A. Mullin},
-  title = {harmonize-wq: Standardize, clean and wrangle Water Quality Portal data into more analytic-ready formats},
+  title = {{h}armonize-wq: Standardize, clean and wrangle {W}ater {Q}uality {P}ortal data into more analytic-ready formats},
   journal = {Journal of Open Source Software}
 }
 
@@ -77,7 +77,7 @@ DOI = {10.25080/Majora-92bf1922-00a}
   number = {19},
   pages = {451},
   author = {Henry Senyondo and Benjamin D. Morris and Akash Goel and Andrew Zhang and Akshay Narasimha and Shivam Negi and David J. Harris and Deborah Gertrude Digges and Kapil Kumar and Amritanshu Jain and Kunal Pal and Kevinkumar Amipara and Ethan P. White},
-  title = {Retriever: Data Retrieval Tool},
+  title = {Retriever: Data {R}etrieval {T}ool},
   journal = {Journal of Open Source Software}
 }
 
@@ -92,7 +92,7 @@ DOI = {10.25080/Majora-92bf1922-00a}
   number = {77},
   pages = {4704},
   author = {Nicholas Brown},
-  title = {tsp (“Teaspoon”): A library for ground temperature data},
+  title = {{tsp} (“{T}easpoon”): A library for ground temperature data},
   journal = {Journal of Open Source Software}
 }
 
@@ -109,7 +109,7 @@ DOI = {10.25080/Majora-92bf1922-00a}
   number = {66},
   pages = {3175},
   author = {Taher Chegini1, Hong-Yi Li1, and L. Ruby Leung},
-  title = {HyRiver: Hydroclimate Data Retriever},
+  title = {HyRiver: Hydroclimate {D}ata {R}etriever},
   journal = {Journal of Open Source Software}
 }
 
@@ -126,7 +126,7 @@ DOI = {10.25080/Majora-92bf1922-00a}
   number = {89},
   pages = {5205},
   author = {Sebastian Haan and Januar Harianto and Nathaniel Butterworth and Thomas Bisho},
-  title = {Geodata-Harvester: A Python package to jumpstart geospatial data extraction and analysis},
+  title = {Geodata-{H}arvester: A {P}ython package to jumpstart geospatial data extraction and analysis},
   journal = {Journal of Open Source Software}
 }
 
@@ -142,7 +142,7 @@ DOI = {10.25080/Majora-92bf1922-00a}
   number = {22},
   pages = {571},
   author = {Stefanie E. LaZerte1 and Sam Albers},
-  title = {weathercan: Download and format weather data from Environment and Climate Change Canada},
+  title = {{w}eathercan: Download and format weather data from {E}nvironment and {C}limate {C}hange {C}anada},
   journal = {Journal of Open Source Software}
 }
 
@@ -160,7 +160,7 @@ DOI = {10.25080/Majora-92bf1922-00a}
   author = {Rodrigo Pires and Anna Hepworth and Rebecca O’Leary1 and Jonathan
 Carroll and James Goldie and Dean Marchiori and Paul Melloy and Mark
 Padgam and Hugh Parsonage and and Adam H. Sparks},
-  title = {weatherOz: An API Client for Australian Weather and Climate Data Resources in R},
+  title = {weatherOz: An API {C}lient for {A}ustralian {W}eather and {C}limate {D}ata {R}esources in {R}},
   journal = {Journal of Open Source Software}
 }
 
@@ -176,7 +176,7 @@ Padgam and Hugh Parsonage and and Adam H. Sparks},
   number = {82},
   pages = {4805},
   author = {Beatrice Marti and Tobias Siegfried},
-  title = {riversCentralAsia: An R package to support data preand postprocessing for hydrological modelling with RS MINERVE},
+  title = {riversCentralAsia: An {R} package to support data preand postprocessing for hydrological modelling with RS MINERVE},
   journal = {Journal of Open Source Software}
 }
 
@@ -185,8 +185,8 @@ Padgam and Hugh Parsonage and and Adam H. Sparks},
 
 
 @article{Caravan,
-  title={Caravan - A global community dataset for large-sample hydrology},
-  author={Frederik Kratzert, Grey Nearing, Nans Addor, Tyler Erickson, Martin Gauch, Oren Gilon, Lukas Gudmundsson, Avinatan Hassidim, Daniel Klotz, Sella Nevo, Guy Shalev & Yossi Matias },
+  title={Caravan - {A} global community dataset for large-sample hydrology},
+  author={Frederik Kratzert and Grey Nearing and Nans Addor and Tyler Erickson and Martin Gauch and Oren Gilon and Lukas Gudmundsson and Avinatan Hassidim and Daniel Klotz and Sella Nevo and Guy Shalev and Yossi Matias},
   journal={Scientific Data},
   volume={10},
   number={61},
@@ -199,7 +199,7 @@ Padgam and Hugh Parsonage and and Adam H. Sparks},
 
 @Article{camels_addor_2017,
 AUTHOR = {Addor, N. and Newman, A. J. and Mizukami, N. and Clark, M. P.},
-TITLE = {The CAMELS data set: catchment attributes and meteorology for
+TITLE = {The CAMELS data set: {c}atchment attributes and meteorology for
 large-sample studies},
 JOURNAL = {Hydrology and Earth System Sciences},
 VOLUME = {21},
@@ -214,7 +214,7 @@ DOI = {10.5194/hess-21-5293-2017}
 
 @Article{lamahce_klingler,
 AUTHOR = {Klingler, C. and Schulz, K. and Herrnegger, M.},
-TITLE = {LamaH-CE: LArge-SaMple DAta for Hydrology and Environmental Sciences for Central Europe},
+TITLE = {LamaH-CE: LArge-SaMple DAta for {H}ydrology and {E}nvironmental {S}ciences for {C}entral {E}urope},
 JOURNAL = {Earth System Science Data},
 VOLUME = {13},
 YEAR = {2021},
@@ -227,7 +227,7 @@ DOI = {10.5194/essd-13-4529-2021}
 
 
 @article{estreams_do2024,
-  title={EStreams: An integrated dataset and catalogue of streamflow, hydro-climatic and landscape variables for Europe},
+  title={EStreams: An integrated dataset and catalogue of streamflow, hydro-climatic and landscape variables for {E}urope},
   author={do Nascimento, Thiago VM and Rudlang, Julia and H{\"o}ge, Marvin and van der Ent, Ruud and Chappon, M{\'a}t{\'e} and Seibert, Jan and Hrachowitz, Markus and Fenicia, Fabrizio},
   journal={Scientific Data},
   volume={11},
@@ -242,7 +242,7 @@ DOI = {10.1038/s41597-024-03706-1}
 
 @Article{gsha_yin2024,
 AUTHOR = {Yin, Z. and Lin, P. and Riggs, R. and Allen, G. H. and Lei, X. and Zheng, Z. and Cai, S.},
-TITLE = {A synthesis of Global Streamflow Characteristics, Hydrometeorology, and Catchment Attributes (GSHA) for large sample river-centric studies},
+TITLE = {A synthesis of {G}lobal {S}treamflow {C}haracteristics, {H}ydrometeorology, and {C}atchment {A}ttributes (GSHA) for large sample river-centric studies},
 JOURNAL = {Earth System Science Data},
 VOLUME = {16},
 YEAR = {2024},
@@ -256,7 +256,7 @@ DOI = {10.5194/essd-16-1559-2024}
 
 
 @article{hysets_arsenault2020,
-  title={A comprehensive, multisource database for hydrometeorological modeling of 14,425 North American watersheds},
+  title={A comprehensive, multisource database for hydrometeorological modeling of 14,425 {N}orth {A}merican watersheds},
   author={Arsenault, Richard and Brissette, Fran{\c{c}}ois and Martel, Jean-Luc and Troin, Magali and L{\'e}vesque, Guillaume and Davidson-Chaput, Jonathan and Gonzalez, Mariana Casta{\~n}eda and Ameli, Ali and Poulin, Annie},
   journal={Scientific Data},
   volume={7},
@@ -270,7 +270,7 @@ DOI = {10.1038/s41597-020-00583-2}
 
 
 @article{bull_senent2024,
-  title={BULL Database--Spanish Basin attributes for Unravelling Learning in Large-sample hydrology},
+  title={BULL {D}atabase--{S}panish {B}asin attributes for {U}nravelling {L}earning in {L}arge-sample hydrology},
   author={Senent-Aparicio, Javier and Castellanos-Osorio, Gerardo and Segura-M{\'e}ndez, Francisco and L{\'o}pez-Ballesteros, Adri{\'a}n and Jimeno-S{\'a}ez, Patricia and P{\'e}rez-S{\'a}nchez, Julio},
   journal={Scientific data},
   volume={11},
@@ -286,7 +286,7 @@ DOI = {10.1038/s41597-024-03594-5}
 
 @Article{cabra_almagro2021,
 AUTHOR = {Almagro, A. and Oliveira, P. T. S. and Meira Neto, A. A. and Roy, T. and Troch, P.},
-TITLE = {CABra: a novel large-sample dataset for Brazilian catchments},
+TITLE = {CABra: {a} novel large-sample dataset for {B}razilian catchments},
 JOURNAL = {Hydrology and Earth System Sciences},
 VOLUME = {25},
 YEAR = {2021},
@@ -300,8 +300,8 @@ DOI = {10.5194/hess-25-3105-2021}
 
 @Article{camels_br,
 AUTHOR = {Chagas, V. B. P. and Chaffe, P. L. B. and Addor, N. and Fan, F. M. and Fleischmann, A. S. and Paiva, R. C. D. and Siqueira, V. A.},
-TITLE = {CAMELS-BR: hydrometeorological time series and landscape attributes for 897
-catchments in Brazil},
+TITLE = {CAMELS-BR: {h}ydrometeorological time series and landscape attributes for 897
+catchments in {B}razil},
 JOURNAL = {Earth System Science Data},
 VOLUME = {12},
 YEAR = {2020},
@@ -315,7 +315,7 @@ DOI = {10.5194/essd-12-2075-2020}
 
 @Article{camels_dk_Liu2024,
 AUTHOR = {Liu, J. and Koch, J. and Stisen, S. and Troldborg, L. and H{\o}jberg, A. L. and Thodsen, H. and Hansen, M. F. T. and Schneider, R. J. M.},
-TITLE = {CAMELS-DK: Hydrometeorological Time Series and Landscape Attributes for 3330 Catchments in Denmark},
+TITLE = {CAMELS-DK: {h}ydrometeorological time series and landscape attributes for 3330 {D}anish catchments with streamflow observations from 304 gauged stations},
 JOURNAL = {Earth System Science Data Discussions},
 VOLUME = {2024},
 YEAR = {2024},
@@ -329,7 +329,7 @@ DOI = {10.5194/essd-2024-292}
 
 @misc{requests,
   author = { Kenneth Reitz},
-  title = {requests: A simple, yet elegant, HTTP library},
+  title = {{r}equests: A simple, yet elegant, HTTP library},
   howpublished = {\url{https://github.com/psf/requests}},
   year = {2018},
   note = {Accessed on 16 Jan 2024}
@@ -352,7 +352,7 @@ url = {https://github.com/Unidata/netcdf-c}
 
 @misc{openpyxl,
   author = {Eric Gazoni and Charlie Clark},
-  title = {openpyxl - A Python library to read/write Excel 2010 xlsx/xlsm files},
+  title = {{o}penpyxl - {A} {P}ython library to read/write {E}xcel 2010 xlsx/xlsm files},
   howpublished = {\url{https://foss.heptapod.net/openpyxl/openpyxl}},
   year = {2024},
   note = {Accessed on 20 Jan 2024}
@@ -363,7 +363,7 @@ url = {https://github.com/Unidata/netcdf-c}
 
 @article{matplotlib,
   author = {John D. Hunter},
-  title = {Matplotlib: A 2D Graphics Environment},
+  title = {Matplotlib: A 2D {G}raphics {E}nvironment},
   journal = {Computing in Science \& Engineering},
   volume = {9},
   number = {3},
@@ -380,8 +380,8 @@ url = {https://github.com/Unidata/netcdf-c}
 
 @Article{camels_gb,
 AUTHOR = {Coxon, G. and Addor, N. and Bloomfield, J. P. and Freer, J. and Fry, M. and Hannaford, J. and Howden, N. J. K. and Lane, R. and Lewis, M. and Robinson, E. L. and Wagener, T. and Woods, R.},
-TITLE = {CAMELS-GB: hydrometeorological time series and landscape attributes for 671
-catchments in Great Britain},
+TITLE = {CAMELS-GB: {h}ydrometeorological time series and landscape attributes for 671
+catchments in {G}reat {B}ritain},
 JOURNAL = {Earth System Science Data},
 VOLUME = {12},
 YEAR = {2020},
@@ -396,7 +396,7 @@ DOI = {10.5194/essd-12-2459-2020}
 
 @misc{dataretrieval,
   author = {Hodson, T.O., Hariharan, J.A., Black, S., and Horsburgh, J.S.},
-  title = {dataretrieval (Python): a Python package for discovering and retrieving water data available from U.S. federal hydrologic web services: U.S. Geological Survey},
+  title = {{d}ataretrieval ({P}ython): {a} {P}ython package for discovering and retrieving water data available from {U.S}. {f}ederal hydrologic web services: {U.S}. {G}eological {S}urvey},
   howpublished = {\url{https://github.com/DOI-USGS/dataretrieval-python}},
   year = {2023},
   note = {Accessed on 16 Jan 2025},
@@ -406,7 +406,7 @@ DOI = {10.5194/essd-12-2459-2020}
 
 @misc{hydrofunctions,
   author = {Martin Roberge},
-  title = {hydrofunctions},
+  title = {{h}ydrofunctions},
   howpublished = {\url{https://github.com/mroberge/hydrofunctions}},
   year = {2018},
   note = {Accessed on 16 Jan 2025}
@@ -416,7 +416,7 @@ DOI = {10.5194/essd-12-2459-2020}
 
 @dataset{caravan_dk_koch2023,
   author       = {Koch, Julian},
-  title        = {Caravan extension Denmark - Danish dataset for large-sample hydrology},
+  title        = {Caravan extension {D}enmark - {D}anish dataset for large-sample hydrology},
   month        = may,
   year         = 2023,
   publisher    = {Zenodo},
